# posts

./: Cargo.toml
entities/: Cargo.toml
entities/src/: lib.rs  posts.rs
errors/: Cargo.toml
errors/src/: lib.rs
migrations/: .env  Cargo.toml
migrations/src/: m20220101_000001_create_table.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
proto/src/v1/: posts.proto
src/: main.rs
src/api/v1/: mod.rs  posts.rs
src/db/: mod.rs
src/middlewares/: mod.rs
