[package]
name = "posts_entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.11", features = ["runtime-tokio-rustls", "serde_json", "macros", "sqlx-postgres", "time"] }
time = { version = "0.3", features = ["serde-well-known"] }
serde_json = { workspace = true }
sea-query = "0.28"
serde = { workspace = true, features = ["derive"] }